# PTOIE-Flair

./: README.md  pyproject.toml
OIE/: eval.py  predict.py  texto.txt  train.py  txt_facts_ext.py
OIE/datasets/validated_splits/: contractions.py  generative_dataset.py
OIE/train_output/: readme.md
OIE/trainers/: trainer.py
